--- a/example/book/print.html
+++ b/example/book/print.html
@@ -173,12 +173,12 @@
     disable-cut='false'
     disable-paste='false'
 ></script>
-<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "cpp" id = "editor_cpp_3a2a5258-0056-4338-b4ad-185b29abb9b5" class="language-cpp hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:276px"></code></pre>
+<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "cpp" id = "editor_cpp_d3b9dd39-8ebb-4abf-8f23-3e974f04a94f" class="language-cpp hljs ace_editor ace_hidpi ace-tm  " draggable="true" style="font-size: 1em; height:276px"></code></pre>
 <pre><code class="language-cpp">#include &lt;stdio.h&gt;
 #include &lt;iostream&gt;
 
 int main(int argc, char** argv){
-	printf("editable without norun\n");
+	printf("editable=false without norun\n");
 	return 0;
 }
 </code></pre>
@@ -193,7 +193,7 @@ int main(int argc, char** argv){
     disable-cut='false'
     disable-paste='false'
 ></script>
-<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "cpp" id = "editor_cpp_8d823881-3800-4e9e-ad19-85496d256d7e" class="language-cpp hljs ace_editor ace_hidpi ace-tm norun editable" draggable="true" style="font-size: 1em; height:276px"></code></pre>
+<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "cpp" id = "editor_cpp_de7c7e67-7b77-4888-9eaa-f1df7b27aca1" class="language-cpp hljs ace_editor ace_hidpi ace-tm norun editable" draggable="true" style="font-size: 1em; height:276px"></code></pre>
 <pre><code class="language-cpp">#include &lt;stdio.h&gt;
 #include &lt;iostream&gt;
 
@@ -213,7 +213,7 @@ int main(int argc, char** argv){
     disable-cut='false'
     disable-paste='false'
 ></script>
-<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "cpp" id = "editor_cpp_7bd91972-d43d-444f-a57c-f305c2d01756" class="language-cpp hljs ace_editor ace_hidpi ace-tm norun editable" draggable="true" style="font-size: 1em; height:276px"></code></pre>
+<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "cpp" id = "editor_cpp_46bf3c79-58a6-4bee-b277-cb7db3311ecf" class="language-cpp hljs ace_editor ace_hidpi ace-tm norun editable" draggable="true" style="font-size: 1em; height:276px"></code></pre>
 <pre><code class="language-cpp">#include &lt;stdio.h&gt;
 #include &lt;iostream&gt;
 
@@ -233,7 +233,7 @@ int main(int argc, char** argv){
     disable-cut='false'
     disable-paste='false'
 ></script>
-<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "cpp" id = "editor_cpp_744140a2-ed32-427d-84b6-c4ae736e6431" class="language-cpp hljs ace_editor ace_hidpi ace-tm norun editable" draggable="true" style="font-size: 1em; height:276px"></code></pre>
+<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "cpp" id = "editor_cpp_35d87da8-e42b-4378-b661-7ed67cf33d88" class="language-cpp hljs ace_editor ace_hidpi ace-tm norun editable" draggable="true" style="font-size: 1em; height:276px"></code></pre>
 <pre><code class="language-cpp">#include &lt;stdio.h&gt;
 #include &lt;iostream&gt;
 
@@ -262,7 +262,7 @@ int main(int argc, char** argv){
     disable-cut='false'
     disable-paste='false'
 ></script>
-<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "javascript" id = "editor_javascript_609da159-47b3-4253-b73c-c4ccfa53b028" class="language-javascript hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:138px"></code></pre>
+<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "javascript" id = "editor_javascript_5a28596f-ba51-4711-a94f-0676eafe05e0" class="language-javascript hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:138px"></code></pre>
 <pre><code class="language-javascript">console.log("Hello JavaScript World!!!")
 </code></pre>
 <p>python</p>
@@ -277,7 +277,7 @@ int main(int argc, char** argv){
     disable-cut='false'
     disable-paste='false'
 ></script>
-<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "python" id = "editor_python_5b8ce494-8780-4e20-b356-0a88abb6ee55" class="language-python hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:138px"></code></pre>
+<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "python" id = "editor_python_0a302584-7de7-4962-a6f1-616d04ca379c" class="language-python hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:138px"></code></pre>
 <pre><code class="language-python">print("Hello Python Wrold")
 </code></pre>
 <p>java</p>
@@ -292,7 +292,7 @@ int main(int argc, char** argv){
     disable-cut='false'
     disable-paste='false'
 ></script>
-<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "java" id = "editor_java_17bb3c2d-5c49-400c-875c-3558afb43f7a" class="language-java hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:253px"></code></pre>
+<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "java" id = "editor_java_0803ab86-42a5-44b1-bd2b-942e949d8e5c" class="language-java hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:253px"></code></pre>
 <pre><code class="language-java">public class Hello{
 
 	public static void main(String[] args){
@@ -312,7 +312,7 @@ int main(int argc, char** argv){
     disable-cut='false'
     disable-paste='false'
 ></script>
-<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "go" id = "editor_go_1155206a-20ae-44c1-bf19-f3352ca4d8c8" class="language-go hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:276px"></code></pre>
+<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "go" id = "editor_go_ec49d81f-f84e-4b8b-8e04-0a775a911afa" class="language-go hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:276px"></code></pre>
 <pre><code class="language-go">package main
 
 import "fmt"
@@ -332,7 +332,7 @@ func main() {
     disable-cut='false'
     disable-paste='false'
 ></script>
-<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "scheme" id = "editor_scheme_19e7dd71-e5de-4902-9769-b6710671f99e" class="language-scheme hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:368px"></code></pre>
+<pre id = "need_replaced"  strict="false" class="playground-lang" server="http://127.0.0.1:3333/api/v1/build-code"><code name = "scheme" id = "editor_scheme_ec0dcaf5-a4bf-4223-9e74-06688b78b142" class="language-scheme hljs ace_editor ace_hidpi ace-tm  editable" draggable="true" style="font-size: 1em; height:368px"></code></pre>
 <pre><code class="language-scheme">;scheme,lisp
 (define (greet-world)
   (let ((southern-germany "Grüß Gott!")
